--- a/app/sass/_font_style.sass
+++ b/app/sass/_font_style.sass
@@ -41,6 +41,14 @@
    line-height: 2rem
 
 
+.medium-fiveteen
+   font-size: 1rem
+   font-family: 'Jost'
+   font-weight: 500
+   letter-spacing: 0.05rem
+   line-height: 2rem
+
+
 .light-seventeen
    font-size: 1.13rem
    font-family: 'Jost'
