product page start

--- a/app/sass/pages/main-page.sass
+++ b/app/sass/pages/main-page.sass
@@ -1,11 +1,5 @@
-$white: #ffffff
-$light: #F7F7F7
-$dark: #17191A
-$blue: #70A0C4
-$dark-light: #4F565B
-$line_gray: #DBDBDB
-$bg-blue: #c3d2d9
-   
+@import '../mixin';
+@import '../vars';
 
 .main
    overflow: hidden
