--- a/app/sass/_reset_css.sass
+++ b/app/sass/_reset_css.sass
@@ -6,3 +6,30 @@ ul
 p
     padding: 0
     margin: 0
+
+
+button
+    outline: none
+    border: none
+    &:active
+        border: none
+        outline: none
+    &:focus
+        border: none
+        outline: none
+
+input
+    outline: none
+    border: none
+    &:active
+        border: none
+        outline: none
+    &:focus
+        border: none
+        outline: none
+
+
+a
+    text-decoration: none
+    &:hover
+        text-decoration: none
