--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'libs';
+@import 'mixin';
 
 html
     font-size: 15px
@@ -55,42 +56,108 @@ html
             &::after
                 background: $white
     &__center
-        height: 100%
-        overflow: hidden
-        &__nav
-            &__list
-                padding: 2.66rem
-                .cart-list-item
-                    width: 100%
-                    display: flex
-                    //flex-direction: row
-                    justify-content: space-between
-                    .item__img-cover
-                        width: 100px
-                        height: 100px
-                        overflow: hidden
-                        position: relative
-                        margin-right: .8rem
-                        &__img
-                            position: absolute
-                            top: 50%
-                            left: 50%
-                            transform: translate(-50%,-50%)
-                            width: 100%
-                    .item__content
-                        &__title
-                            display: flex
-                            justify-content: space-between
-                            &>a
+        height: calc(100vh - 166px - 80px
+        overflow-y: scroll
+        &::-webkit-scrollbar
+            width: 0
+        &__list
+            padding: 2.66rem
+            .cart-list-item
+                width: 100%
+                display: flex
+                justify-content: space-between
+                margin-bottom: 2rem
+                &:last-child
+                    margin-bottom: 0
+                .item__img-cover
+                    width: 100px
+                    height: 100px
+                    overflow: hidden
+                    position: relative
+                    margin-right: .8rem
+                    &__img
+                        position: absolute
+                        top: 50%
+                        left: 50%
+                        transform: translate(-50%,-50%)
+                        width: 100%
+                .item__content
+                    width: calc(100% - 100px - 0.8rem)
+                    &__title
+                        display: flex
+                        justify-content: space-between
+                        margin-bottom: 0.6rem
+                        &>a
+                            text-decoration: none
+                            color: $white
+                            transition: all 0.3s ease
+                            &:hover
                                 text-decoration: none
-                                color: $white
-                                transition: all 0.3s ease
-                                &:hover
-                                    text-decoration: none
-                                    color: $light
-                        .product-quantity-price
+                                color: $light
+                        .close-button
+                            width: 1.3rem
+                            height: 1.3rem
+                            &::after
+                                background: $white
+                                height: 1px
+                            &::before
+                                background: $white
+                                height: 1px
+                    .product-quantity-price
+                        display: flex
+                        justify-content: space-between
+                        .item-quantity
                             display: flex
-                            justify-content: space-between
+                            flex-direction: row
+                            .input-number
+                                display: inline-block
+                                font-family: 'Jost'
+                                font-size: 1rem
+                                font-weight: 400
+                                width: 2.2em
+                                height: 2.2em
+                                background: none
+                                border: 0
+                                outline: none
+                                color: $white
+                                text-align: center
+                                &::-webkit-outer-spin-button,
+                                &::-webkit-inner-spin-button 
+                                    -webkit-appearance: none
+                                    margin: 0
+                            .plus
+                                position: relative
+                                &:hover
+                                    &::after
+                                        background: rgba($light, 0.15)
+                                &::after
+                                    content: ''
+                                    position: absolute
+                                    top: 50%
+                                    left: 50%
+                                    transform: translate(-50%,-50%)
+                                    width: 1.5rem
+                                    height: 1.5rem
+                                    border-radius: 50%
+                                    background: rgba($light, 0)
+                                    transition: all 0.3s ease
+                            .minus
+                                position: relative
+                                &:hover
+                                    &::after
+                                        background: rgba($light, 0.15)
+                                &::after
+                                    content: ''
+                                    position: absolute
+                                    top: 50%
+                                    left: 50%
+                                    transform: translate(-50%,-50%)
+                                    width: 1.5rem
+                                    height: 1.5rem
+                                    border-radius: 50%
+                                    background: rgba($light, 0)
+                                    transition: all 0.3s ease
+                        .item-price
 
     &__bottom
         padding: 1.6rem 2.66rem 2.66rem 2.66rem
@@ -130,6 +197,7 @@ html
     border-radius: 50%
     border: none
     position: relative
+    outline: none
     &:hover
         &::before
             transform: translate(-50%, -50%) rotate(0deg)
@@ -507,6 +575,7 @@ html
 
 
 @import 'pages/main-page.sass';
+@import 'pages/product-page.sass';
 
 
 
