--- a/app/sass/pages/product-page.sass
+++ b/app/sass/pages/product-page.sass
@@ -78,3 +78,75 @@
                margin: 0 0.3rem 0 0
                &:last-child
                   margin: 0
+
+
+
+.products
+   padding: 0 2rem
+   .fore-item
+      display: flex
+      flex-direction: row
+      width: 100%
+      flex-wrap: wrap
+      .big-products__list__item
+         width: calc( (100vw - 12rem) / 4 )
+         margin-bottom: 3rem
+         margin-right: 2rem
+         &:nth-child(4)
+            margin-right: 0
+         &:nth-child(8)
+            margin-right: 0
+         &:nth-child(12)
+            margin-right: 0
+         .product-cart
+            max-width: 100%
+            .product-cart__top
+               width: 100%
+               height: calc( (100vw - 12rem) / 4 )
+   .five-item
+      display: flex
+      flex-direction: row
+      width: 100%
+      flex-wrap: wrap
+      .big-products__list__item
+         width: calc( (100vw - 14rem) / 5 )
+         margin-bottom: 3rem
+         margin-right: 2rem
+         &:nth-child(5)
+            margin-right: 0
+         &:nth-child(10)
+            margin-right: 0
+         &:nth-child(15)
+            margin-right: 0
+         .product-cart
+            max-width: 100%
+            .product-cart__top
+               width: 100%
+               height: calc( (100vw - 14rem) / 5 )
+   .list-item
+      display: flex
+      flex-direction: row
+      width: 100%
+      flex-wrap: wrap
+      .big-products__list__item
+         width: calc( (100vw - 8rem) / 2 )
+         margin-bottom: 3rem
+         margin-right: 2rem
+         &:nth-child(2)
+            margin-right: 0
+         &:nth-child(4)
+            margin-right: 0
+         &:nth-child(6)
+            margin-right: 0
+         &:nth-child(8)
+            margin-right: 0
+         &:nth-child(10)
+            margin-right: 0
+         &:nth-child(12)
+            margin-right: 0
+         .product-cart
+            max-width: 100%
+            display: flex
+            .product-cart__top
+               width: 400px
+               height: 400px
