--- a/app/sass/_mixin.sass
+++ b/app/sass/_mixin.sass
@@ -11,3 +11,10 @@
       height: 2px
       background: $color
       transition: all 0.3s ease
+
+
+@mixin absolute-align-center
+   position: absolute
+   top: 50%
+   left: 50%
+   transform: translate(-50%, -50%)
