--- a/app/sass/pages/main-page.sass
+++ b/app/sass/pages/main-page.sass
@@ -208,7 +208,9 @@
       justify-content: space-between
       flex-direction: row
       width: 100%
+      transition: all 0.3s ease
       &__item
+         transition: all 0.3s ease
 
 
 
@@ -248,7 +250,7 @@
       .new-icon
          position: absolute
          top: 1rem
-         right: 1rem
+         left: 1rem
          z-index: 3
          font-family: 'Jost'
          font-size: 0.8rem
@@ -257,6 +259,45 @@
          background: $white
          border-radius: 50px
          padding: 0.42em 1.2em
+      .product-cart__list-icon
+         &:hover
+            button
+               background: $white
+               svg
+                  path
+                     fill: $dark
+            .cart-icon
+               top: calc( 1rem + 1rem + 35px )
+               opacity: 1
+         button
+            background: none
+            transition: all 0.3s ease
+            &:hover
+               background: $light
+            svg
+               path
+                  transition: all 0.3s ease
+         .like-icon
+            position: absolute
+            top: 1rem
+            right: 1rem
+            z-index: 4
+            border-radius: 50px
+            padding: 1px
+         .cart-icon
+            position: absolute
+            top: 1rem
+            right: 1rem
+            z-index: 3
+            border-radius: 50px
+            padding: 1px
+            opacity: 0
+            &::before
+               content: ''
+               width: 35px
+               height: 50px
+               position: absolute
+               top: -35px
       .figure-product
          width: 100%
          height: 100%
@@ -331,6 +372,16 @@
                      height: 24px
                      border: 1px solid $dark
                      border-radius: 100px
+         .additing-block-information
+            max-width: 400px
+            .block-description
+               margin: 3rem 0
+            .stroke-button
+               border: 2px solid $dark
+               color: $dark
+               &:hover
+                  color: $white
+                  background: $dark
       &__right
          .add-like
 
