single prod page

--- a/app/sass/_font_style.sass
+++ b/app/sass/_font_style.sass
@@ -18,6 +18,13 @@
    line-height: 2rem
 
 
+.h4-style
+   font-size: 1.1rem
+   font-family: 'Jost'
+   font-weight: 500
+   letter-spacing: 0
+
+
 .light-thirteen
    font-size: 0.9rem
    font-family: 'Jost'
