--- a/app/sass/pages/main-page.sass
+++ b/app/sass/pages/main-page.sass
@@ -178,20 +178,11 @@
          .cart-description
             margin-top: 3.5rem
             color: $white
-         .fill-button
+         .fill-button-white
             margin-top: 3.5rem
-            display: inline-block
-            font-size: 1.13rem
-            font-family: 'Jost'
-            font-weight: 500
-            letter-spacing: 0.05rem
-            line-height: 2rem
-            background: $white
-            padding: 0.532em 1.9em
-            color: $dark
-            text-decoration: none
-            transition: all 0.3s ease
 
+
+   
 .section-title
    width: 100%
    text-align: center
@@ -499,7 +490,7 @@
 
 
 .about
-   padding: 6rem 0
+   padding: 6rem 0 1rem 0
    &__content
       &__img-cover
          width: 100%
