--- a/app/sass/_reset_css.sass
+++ b/app/sass/_reset_css.sass
@@ -10,22 +10,24 @@ p
 
 button
     outline: none
-    border: none
     &:active
-        border: none
         outline: none
     &:focus
-        border: none
         outline: none
 
 input
     outline: none
-    border: none
     &:active
-        border: none
         outline: none
     &:focus
-        border: none
+        outline: none
+
+
+textarea
+    outline: none
+    &:active
+        outline: none
+    &:focus
         outline: none
 
 
