--- a/app/sass/_elements.sass
+++ b/app/sass/_elements.sass
@@ -64,3 +64,70 @@
    &:hover
       color: $white
       background: $black
+
+
+.el-input
+   position: relative
+   width: 100%
+   &__label
+      position: absolute
+      top: 23px
+      left: 1.4rem
+      z-index: 3 !important
+      transform: translate(0%, -50%)
+      font-size: 1rem
+      font-family: 'Jost'
+      font-weight: 400
+      color: $dark
+      z-index: -1
+      transition: all 0.3s ease
+      display: inline-block
+      padding: 0.1rem 0.4rem
+   .el-label-focus
+      top: 0
+      transform: translateY(-50%)
+      background: $white
+      color: $dark-light
+   &__field
+      width: 100%
+      padding: 0.74rem 1.5rem
+      border: 2px solid $dark
+      border-radius: 0
+      background: none
+      font-size: 1rem
+      font-family: 'Jost'
+      font-weight: 500
+
+.el-form__button
+   padding: 0.534em 1.828em
+   font-size: 1.13rem
+   font-family: 'Jost'
+   font-weight: 500
+   letter-spacing: 0.05rem
+   line-height: 2rem
+   color: $white
+   background: $dark
+   border: none
+   border-radius: 0
+   transition: all 0.3s ease
+   &:hover
+      background: $blue
+
+
+.stroke-button-dark
+   font-family: 'Jost'
+   font-size: 1.13rem
+   font-weight: 500
+   letter-spacing: .05rem
+   line-height: 2rem
+   color: $dark-light
+   display: inline-block
+   border: 2px solid $dark-light
+   padding: .413em 1.9em
+   text-decoration: none
+   transition: all 0.3s ease
+   background: none
+   &:hover
+      text-decoration: none
+      color: $dark
+      border: 2px solid $dark
