--- a/app/sass/pages/product-single-page.sass
+++ b/app/sass/pages/product-single-page.sass
@@ -18,7 +18,9 @@
       path
          fill: $dark !important
 
-
+.small-container
+   width: 780px
+   margin: 0 auto
 
 .information-product
    width: 100%
@@ -207,3 +209,107 @@
                   width: 100%
                   height: 100%
                   @incude absolute-align-center
+
+
+.description-product 
+   margin-bottom: 10rem
+   &__text
+      margin: 0 auto
+      width: 780px
+      p
+         color: $dark-light
+         margin-bottom: 2rem
+         &:last-child
+            margin-bottom: 0
+
+
+.section-product__title
+   margin: 3.66rem 0 2rem
+   h2
+      width: fit-content
+      position: relative
+      &::after
+         content: ''
+         position: absolute
+         top: 55%
+         right: calc( -2.66rem - 45px )
+         height: 1px
+         width: 45px
+         background: $blue-light
+
+
+.comments-product
+   &__writed
+      text-align: center
+      &__list
+         .comment__item
+            display: flex
+            text-align: left
+            margin-top: 2rem
+            &:first-child
+               margin-top: 0
+            &__avatar-cover
+               position: relative
+               width: 80px
+               height: 80px
+               border-radius: 50%
+               overflow: hidden
+               margin-right: 1.5rem
+               &__img
+                  width: 100%
+                  height: 100%
+                  @include absolute-align-center
+            &__text
+               padding-bottom: 2rem
+               border-bottom: 1px solid $blue-light
+               &__info
+                  display: flex
+                  justify-content: space-between
+                  .comment__name-date
+                     &__name
+                        color: $dark
+                        line-height: 1em
+                        margin-bottom: 0.5rem
+                     &__date
+                        line-height: 1em
+                        color: $dark-light
+               &__message
+                  color: $dark-light
+                  margin-top: 1rem
+
+   &__add
+      .comment-form
+         margin-top: 3rem
+         text-align: center
+         .comments-notes
+            width: 100%
+            text-align: left
+            font-size: 1rem
+            font-family: 'Jost'
+            font-weight: 400
+            color: $dark-light
+            small
+               color: $red
+         .comments-rating
+            display: flex
+            align-items: center
+            justify-content: center
+            background: $light
+            padding: 1rem
+            margin-top: 1rem
+            margin-bottom: 2rem
+            &__label
+               font-size: 1rem
+               font-family: 'Jost'
+               font-weight: 400
+               margin: 0
+               color: $dark-light
+            .stars
+         .comments__email-name
+            display: flex
+            flex-direction: row
+            margin-bottom: 2rem
+            .comments-name
+               margin-right: 2rem
+         .comments-textarea
+            margin-bottom: 2rem
