--- a/app/sass/pages/product-page.sass
+++ b/app/sass/pages/product-page.sass
@@ -58,6 +58,7 @@
             &:last-child
                border-right: none
             button
+               border: none
                background: none
                display: inline-flex
                align-items: center
