--- a/app/sass/pages/main-page.sass
+++ b/app/sass/pages/main-page.sass
@@ -261,6 +261,7 @@
                top: calc( 1rem + 1rem + 35px )
                opacity: 1
          button
+            border: none
             background: none
             transition: all 0.3s ease
             &:hover
