--- a/app/sass/pages/product-single-page.sass
+++ b/app/sass/pages/product-single-page.sass
@@ -119,6 +119,7 @@
             height: 48px
             background: $gray
             transition: all 0.3s ease
+            border: none
             svg
                path
                   fill: $white
@@ -239,6 +240,7 @@
 
 
 .comments-product
+   margin-bottom: 10rem
    &__writed
       text-align: center
       &__list
@@ -248,6 +250,10 @@
             margin-top: 2rem
             &:first-child
                margin-top: 0
+            &:last-child
+               margin-bottom: 1.66rem
+               .comment__item__text
+                  border-bottom: none
             &__avatar-cover
                position: relative
                width: 80px
@@ -276,8 +282,9 @@
                &__message
                   color: $dark-light
                   margin-top: 1rem
-
    &__add
+      transition: all 0.3s ease
+      overflow: hidden
       .comment-form
          margin-top: 3rem
          text-align: center
@@ -313,3 +320,7 @@
                margin-right: 2rem
          .comments-textarea
             margin-bottom: 2rem
+
+.comments-hidden
+   height: 0 !important
+   
