--- a/app/sass/pages/main-page.sass
+++ b/app/sass/pages/main-page.sass
@@ -187,9 +187,11 @@
    width: 100%
    text-align: center
    margin-bottom: 3rem
-   &__title
+   .section-text__title
       margin-bottom: 1rem
-   &__description
+   .seciton-text__description
+      margin: 0 auto
+      max-width: 650px
 
 
 .big-products
