--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -579,13 +579,15 @@ html
 @import 'pages/main-page.sass';
 @import 'pages/product-page.sass';
 @import 'pages/product-single-page.sass';
+@import 'pages/contact-page.sass';
+@import 'pages/about-page.sass';
 
 
 
 // Footer
 
 .footer
-    margin-top: 15rem
+    //margin-top: 15rem
     &__form
         border-top: 1px solid $line_gray
     &__links
