write three pages

--- a/app/sass/_font_style.sass
+++ b/app/sass/_font_style.sass
@@ -4,6 +4,12 @@
     font-size: 3.5rem
 
 
+.error-h1-style
+   font-family: 'Jost'
+   font-weight: 500
+   font-size: 13.33rem
+
+
 .h2-style
     font-family: 'PlayfairDisplay'
     font-weight: 400
