--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -581,10 +581,15 @@ html
 @import 'pages/product-single-page.sass';
 @import 'pages/contact-page.sass';
 @import 'pages/about-page.sass';
+@import 'pages/answer-questions-page.sass';
+@import 'pages/404-page.sass';
 
 
 
 // Footer
+
+.footer-marg
+   margin-bottom: 15rem
 
 .footer
     //margin-top: 15rem
