--- a/app/sass/pages/about-page.sass
+++ b/app/sass/pages/about-page.sass
@@ -26,7 +26,7 @@
    margin-bottom: 3rem
    &__content
       text-align: left
-      margin: 16rem auto
+      margin: 16rem auto 0
       color: $white
       .start-img__breadcrumbs
          margin: 0
@@ -111,3 +111,6 @@
 .about-question-form
    background: $light
    padding: 6rem 0
+   .el-input
+      .el-label-focus
+         background: $light
