--- a/app/sass/pages/product-page.sass
+++ b/app/sass/pages/product-page.sass
@@ -1,6 +1,37 @@
 @import '../mixin';
 @import '../vars';
    
+//filter
+
+.prod-filter-overlay
+   position: fixed
+   right: 0
+   top: 0
+   z-index: $cart-menu-overlay-z-index
+   width: 100%
+   height: 100vh
+   background: rgba($blue, 0)
+   visibility: hidden
+   transition: all 0.4s ease
+
+
+.prod-filter
+   position: fixed
+   left: -100%
+   top: 0
+   z-index: $cart-menu-z-index
+   width: 450px
+   height: 100vh
+   background: $dark
+   color: $white
+   transition: all 0.3s ease
+   display: flex
+   flex-direction: column
+   justify-content: space-between
+
+//filter
+
+
 .start-img
    width: 100%
    height: 750px
