--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -584,6 +584,14 @@ html
 @import 'pages/answer-questions-page.sass';
 @import 'pages/404-page.sass';
 
+//user
+@import 'pages/user-profile-page.sass';
+@import 'pages/user-account-page.sass';
+@import 'pages/user-payment-page.sass';
+@import 'pages/user-notification-page.sass';
+@import 'pages/user-delete-page.sass';
+
+
 
 
 // Footer
