--- a/app/sass/pages/product-single-page.sass
+++ b/app/sass/pages/product-single-page.sass
@@ -238,6 +238,8 @@
          width: 45px
          background: $blue-light
 
+.comment-form-box
+   overflow: hidden
 
 .comments-product
    margin-bottom: 10rem
@@ -283,8 +285,8 @@
                   color: $dark-light
                   margin-top: 1rem
    &__add
-      transition: all 0.3s ease
-      overflow: hidden
+      transition: all 0.5s ease-in-out
+      opacity: 1
       .comment-form
          margin-top: 3rem
          text-align: center
@@ -322,5 +324,6 @@
             margin-bottom: 2rem
 
 .comments-hidden
-   height: 0 !important
+   opacity: 0
+   margin-top: -600px !important
    
