--- a/app/sass/_elements.sass
+++ b/app/sass/_elements.sass
@@ -98,6 +98,18 @@
       font-family: 'Jost'
       font-weight: 500
 
+.el-checkbox
+   display: flex
+   align-items: center
+   &__box
+      margin-right: 1.33rem
+   &__label
+      font-size: 1rem
+      font-family: 'Jost'
+      font-weight: 400
+      color: $dark-light
+      display: inline-block
+
 .el-form__button
    padding: 0.534em 1.828em
    font-size: 1.13rem
