--- a/app/sass/_elements.sass
+++ b/app/sass/_elements.sass
@@ -111,6 +111,7 @@
       display: inline-block
 
 .el-form__button
+   display: inline-block
    padding: 0.534em 1.828em
    font-size: 1.13rem
    font-family: 'Jost'
@@ -124,6 +125,7 @@
    transition: all 0.3s ease
    &:hover
       background: $blue
+      color: $white
 
 
 .stroke-button-dark
