--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -591,6 +591,8 @@ html
 @import 'pages/user-notification-page.sass';
 @import 'pages/user-delete-page.sass';
 
+//cart - like
+@import 'pages/cart-page.sass';
 
 
 
