--- a/app/sass/pages/contact-page.sass
+++ b/app/sass/pages/contact-page.sass
@@ -8,7 +8,7 @@
 .contact__start-img
    width: 100%
    height: 750px
-   background: url('../img/slide-2.jpg') center/cover no-repeat
+   background: url('../img/page-cover/contact.jpg') center/cover no-repeat
    margin-bottom: 3rem
    &__content
       text-align: center
