--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -486,6 +486,7 @@ html
                         .main-menu__item
                             &:hover
                                 .sub-nav
+                                    box-shadow: 0 6px 10px rgba($dark, 0.15)
                                     opacity: 1
                                     visibility: visible
                                     &__item
@@ -593,6 +594,7 @@ html
 
 //cart - like
 @import 'pages/cart-page.sass';
+@import 'pages/like-page.sass';
 
 
 
