--- a/app/sass/pages/about-page.sass
+++ b/app/sass/pages/about-page.sass
@@ -22,9 +22,23 @@
 .about-start-img
    width: 100%
    height: 750px
-   background: $blue-light
+   background: url('../img/page-cover/about.jpg') center/cover no-repeat
    margin-bottom: 3rem
+   position: relative
+   .svg-bg
+      position: absolute
+      opacity: 0.33
+   .left-svg
+      top: 160%
+      right: 0%
+      transform: translate(-50%,-50%)
+   .right-svg
+      top: 50%
+      left: 145%
+      transform: translate(-50%,-50%)
    &__content
+      position: relative
+      z-index: 1
       text-align: left
       margin: 16rem auto 0
       color: $white
@@ -47,6 +61,8 @@
 
 
 .minus-margin
+   position: relative
+   z-index: 2
    margin-top: -10rem
 
 
