--- a/app/sass/pages/cart-page.sass
+++ b/app/sass/pages/cart-page.sass
@@ -72,6 +72,7 @@
       width: 300px
       background: $light
       padding: 2.66rem
+      height: 100%
       .el-form__button
          width: 100%
          text-align: center
@@ -114,6 +115,7 @@
                   &:last-child
                      flex-direction: column
                   .cart__item-slide
+                     cursor: pointer
                      display: flex
                      justify-content: space-between
                      align-items: center
@@ -125,7 +127,12 @@
                         white-space: nowrap
                         color: $dark-light
                         padding: 1rem 0
-                     &>span
+                     .close
+                        &::before
+                           transform: translateY(-50%) rotate(0deg) !important
+                        &::after
+                           transform: translateY(-50%) rotate(0deg)  !important
+                     .delete-item
                         width: 15px
                         height: 15px
                         display: block
@@ -153,7 +160,14 @@
                            background: $dark-light
                            border-radius: 3px
                            transition: all 0.3s ease
+                  .item-forms__open
+                     .cart__item-forms
+                        margin-top: 5px !important
+                  .cart__item-forms__cover
+                     overflow: hidden
                   .cart__item-forms
+                     margin-top: -200px
+                     transition: all 0.5s ease-out
                      &>li
                         margin-bottom: 2rem
                         .el-input
